# vigilant-adventure

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md
agentcore-agent-template/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
agentcore-agent-template/config/: agent.yaml
agentcore-agent-template/src/: agent.py
agentcore-agent-template/tests/: conftest.py
agentcore-agent-template/tests/integration/: test_integration.py
agentcore-agent-template/tests/unit/: test_agent.py
agentcore-terraform/: .gitignore  README.md
agentcore-terraform/environments/dev/: gateway-instruction.txt  main.tf  terraform.tfvars.example  variables.tf
agentcore-terraform/environments/prod/: main.tf  tenants.tf  variables.tf
agentcore-terraform/modules/agentcore-platform/: main.tf  outputs.tf  variables.tf
agentcore-terraform/modules/authoriser/: main.tf  outputs.tf  variables.tf
agentcore-terraform/modules/authoriser/src/: index.js  package.json
agentcore-terraform/modules/tenant/: main.tf  outputs.tf  variables.tf
agentcore-terraform/scripts/: build-authoriser.sh
